--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -17,15 +17,15 @@
 	padding: 8px;
 	border: 1px solid #CCC;
 	border-radius: 0px 5px 5px 5px;
-	position: absolute;
+	position: fixed;
 	z-index: 99999;
 	cursor: pointer;
 	top: 0;
 	left: 0;
 	display: none;
 	visibility: hidden;
-	margin-left: -35px;
-	margin-top: -99px;
+	/* margin-left: -35px;
+	margin-top: -99px; */
 }
 .context-menu:hover {
 	filter: brightness(150%);
